# rubezhbot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/app/: __init__.py  bot.py
src/chat_actions/: __init__.py  dice.py  percent.py  root_keyboard.py  sign_up.py
src/db/: __init__.py  base_model.py  engine.py
src/db/migrations/: base_migrations.py
src/db/models/: __init__.py  character.py  fraction.py  membership.py  points.py
src/domain/: __init__.py  character.py  fraction.py  membership.py  points.py
src/side_actions/: __init__.py  like_watcher.py
src/utils/: __init__.py  logging.py  payload.py
