[project]
name = "rubezh-vkbot"
version = "0.1.0"
description = ""
authors = [
    {name = "b_chirva",email = "bchirva@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "vkbottle (>=4.6.2,<5.0.0)",
    "vkbottle-types (>=5.199.99.12,<6.0.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
black = "^25.12.0"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

